--- a/seminar4/package.json
+++ b/seminar4/package.json
@@ -13,7 +13,8 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "@prisma/client": "^4.5.0",
-    "express": "^4.18.2"
+    "@prisma/client": "^4.6.1",
+    "express": "^4.18.2",
+    "prisma": "^4.6.1"
   }
 }
