--- a/seminar3-netflix/package.json
+++ b/seminar3-netflix/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^4.7.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "prisma": "^4.7.0"
   },
   "scripts": {
     "dev": "nodemon",
